@@ -5,6 +5,7 @@ Changes in version 1.3
 ----------------------
 - Added tablespace support to createTable, createIndex, addPrimaryKey, and addUniqueConstraint
 - Restored Java 6 Support
+- added defaultCascade attribute to addForeignKeyConstraint
 
 Changes in version 1.2.1 (2007.8.31)
 ----------------------
